# Melody-Generator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README_ALGORITHM.md  WHITEPAPER.md  gui.py  melody-generator.py  melody_gui.py  pyproject.toml  requirements.txt  ruff.toml  web_gui.py
.github/workflows/: ci.yml  test.yml
docs/: README.md  README_ALGORITHM.md  README_ARCHITECTURE.md  README_DEVELOPMENT.md  README_DOCKER.md  README_FLUIDSYNTH.md  README_ML_CONCEPTS.md  README_MUSICAL_OVERVIEW.md  README_SETUP.md  README_SOUND_FONTS.md  README_STYLE_WEIGHTS.md  README_TRAINING.md  README_TROUBLESHOOTING.md  example_styles.json
melody_generator/: __init__.py  __main__.py  augmentation.py  batch_generation.py  cli.py  dynamics.py  feedback.py  gui.py  harmony_generator.py  midi_io.py  note_utils.py  performance.py  phrase_planner.py  playback.py  polyphony.py  rhythm_engine.py  sequence_model.py  style_embeddings.py  tension.py  utils.py  voice_leading.py  web_gui.py
melody_generator/static/: style.css
melody_generator/templates/: index.html  play.html
scripts/: setup_linux.sh  setup_mac.sh  setup_windows.ps1  train_multi_genre.py
static/: style.css
templates/: index.html  play.html
tests/: test_augmentation.py  test_augmentation_helpers.py  test_batch_generation.py  test_cli.py  test_cli_gui_integration.py  test_cli_random_chords_validation.py  test_cross_platform_open_player.py  test_dynamics.py  test_feedback.py  test_genre_model_loading.py  test_gui_initialization.py  test_gui_theme_warning.py  test_harmony_generator.py  test_humanize_flag.py  test_melody.py  test_memoization.py  test_midi_io.py  test_midi_to_degrees.py  test_note_to_midi.py  test_performance.py  test_phrase_planner.py  test_play_midi.py  test_playback.py  test_polyphony.py  test_preview_cleanup_logging.py  test_rate_limit.py  test_rhythm.py  test_rhythm_engine.py  test_seed_logging.py  test_sequence_model.py  test_setup_linux.py  test_setup_mac.py  test_setup_windows.py  test_setup_windows_script.py  test_style_docs_link.py  test_style_embeddings.py  test_tension.py  test_train_multi_genre.py  test_utils.py  test_validation_errors.py  (+5 more)
