[tool.pytest.ini_options]
addopts = "-vv"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "melody-generator"
version = "0.1.0"
description = "Random melody generator with CLI and GUI"
authors = [{name = "Austin Boone"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: Flask",
]
dependencies = [
    "mido",
    "Flask",
]

[project.scripts]
melody-generator = "melody_generator:main"

[tool.setuptools.package-data]
"melody_generator" = ["gui.py", "web_gui.py", "templates/*.html", "static/*"]
